Authentication with pow

--- a/lib/wait_list_web/templates/layout/app.html.eex
+++ b/lib/wait_list_web/templates/layout/app.html.eex
@@ -8,24 +8,64 @@
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <%= csrf_meta_tag() %>
   </head>
-  <body>
-    <header>
-      <section class="container">
-        <nav role="navigation">
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-          </ul>
-        </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
-      </section>
-    </header>
-    <main role="main" class="container">
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
-      <%= render @view_module, @view_template, assigns %>
-    </main>
+  <body class="container mx-auto bg-gray-100 font-sans">
+    <div class="bg-white">
+      <header>
+        <section class="">
+          <nav class="flex items-center justify-between flex-wrap bg-blue-500 p-4">
+            <div class="flex items-center flex-shrink-0 text-white mr-6">
+              <svg class="fill-current h-6 w-6"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 338.695 237.184">
+                <path d="M36.918 134.517a7.726 7.726 0 01-5.059 2.284c-.143.006-.285.014-.428.014a7.68 7.68 0 01-2.904-.568v39.349a6.738 6.738 0 006.74 6.739c.643 0 1.264-.096 1.853-.264a10.337 10.337 0 01-.203-2.027v-45.527z"/>
+                <path d="M23.377 118.066c.021-16.291 2.389-27.812 7.24-35.222.508-.772 1.051-1.5 1.621-2.18H16.73c-.082 0-.166.009-.248.014-.99.019-2.6.239-4.428 1.161-1.936.966-4.027 2.71-5.818 5.428C2.648 92.744.023 101.851 0 118.306c0 3.193.103 6.663.324 10.443a4.36 4.36 0 108.708-.509 169.668 169.668 0 01-.309-9.935c-.006-10.907 1.287-17.896 2.822-22.154.322-.89.65-1.649.975-2.313v81.757a6.737 6.737 0 006.74 6.739 6.738 6.738 0 006.738-6.739v-41.033a7.694 7.694 0 01-2.266-5.021 198.123 198.123 0 01-.355-11.475z"/>
+                <circle cx="27.264" cy="65.292" r="12.266"/>
+                <path d="M67.131 135.34l-.117.137a8.066 8.066 0 01-5.619 2.705 8.056 8.056 0 01-4.16-.893v42.754a7.292 7.292 0 007.293 7.291c.969 0 1.891-.193 2.736-.536a10.921 10.921 0 01-.133-1.607V135.34z"/>
+                <path d="M52.486 118.166c.024-17.57 2.568-29.982 7.791-37.957a24.665 24.665 0 012.189-2.855H44.475c-.09 0-.18.01-.27.015-1.07.021-2.811.259-4.789 1.257-2.094 1.045-4.357 2.931-6.295 5.871-3.879 5.924-6.721 15.775-6.744 33.575 0 3.454.111 7.208.35 11.297a4.716 4.716 0 004.984 4.435 4.714 4.714 0 004.434-4.985 184.69 184.69 0 01-.332-10.747c-.008-11.799 1.393-19.359 3.053-23.966a25.48 25.48 0 011.053-2.502v88.439a7.291 7.291 0 0014.582 0v-45.069a8.068 8.068 0 01-1.631-4.411 214.28 214.28 0 01-.384-12.397z"/>
+                <circle cx="55.868" cy="60.724" r="13.269"/>
+                <path d="M99.586 135.844a8.438 8.438 0 01-.652.828 8.535 8.535 0 01-6.438 2.889 8.539 8.539 0 01-3.637-.818v46.449a7.886 7.886 0 007.887 7.886 7.87 7.87 0 002.891-.554c-.029-.33-.051-.663-.051-1v-55.68z"/>
+                <path d="M83.488 117.844c.026-19.253 2.807-32.848 8.512-41.566a26.999 26.999 0 011.58-2.142H75.061c-.098 0-.195.01-.293.015-1.156.022-3.039.28-5.178 1.36-2.264 1.128-4.715 3.168-6.809 6.348-4.193 6.408-7.27 17.061-7.295 36.312 0 3.735.121 7.795.379 12.218a5.101 5.101 0 1010.186-.595 201.24 201.24 0 01-.359-11.623c-.006-12.76 1.506-20.937 3.303-25.919.375-1.039.76-1.929 1.137-2.705v95.645a7.886 7.886 0 1015.772 0v-48.725a8.567 8.567 0 01-1.996-5.014c-.279-4.791-.42-9.368-.42-13.609z"/>
+                <circle cx="87.381" cy="56.151" r="14.351"/>
+                <path d="M118.918 117.441c.029-20.78 3.025-35.441 9.168-44.824a29.02 29.02 0 012.417-3.177h-22.499c-.107 0-.215.011-.322.017-1.271.025-3.342.309-5.691 1.495-2.488 1.241-5.184 3.483-7.486 6.979-4.609 7.044-7.99 18.755-8.018 39.917 0 4.105.133 8.568.416 13.43a5.61 5.61 0 1011.198-.653 219.862 219.862 0 01-.395-12.777c-.008-14.027 1.654-23.016 3.631-28.492a29.9 29.9 0 011.25-2.974v105.142a8.669 8.669 0 0017.336 0v-56.756a9.004 9.004 0 01-.549-2.617 252.58 252.58 0 01-.456-14.71z"/>
+                <path d="M136.334 136.064a9.074 9.074 0 01-1.133 1.585 9.003 9.003 0 01-6.248 3.024 9.007 9.007 0 01-5.781-1.674v52.524a8.67 8.67 0 008.67 8.668 8.622 8.622 0 004.623-1.344 12.523 12.523 0 01-.131-1.7v-61.083z"/>
+                <circle cx="121.548" cy="49.669" r="15.775"/>
+                <path d="M173.289 136.494a9.65 9.65 0 01-1.693 2.688 9.545 9.545 0 01-7.18 3.217c-.977 0-1.92-.15-2.811-.424v55.173a9.377 9.377 0 009.379 9.378c.863 0 1.695-.127 2.489-.345a13.286 13.286 0 01-.185-2.105v-67.582z"/>
+                <path d="M154.838 133.358a274.793 274.793 0 01-.492-15.983c.029-22.551 3.275-38.449 9.928-48.614a31.127 31.127 0 012.832-3.68h-21.91c-.117 0-.232.011-.348.018-1.375.027-3.615.335-6.156 1.618-2.693 1.342-5.607 3.768-8.1 7.549-4.986 7.619-8.643 20.288-8.674 43.181 0 4.442.143 9.271.451 14.529a6.068 6.068 0 1012.113-.707 237.21 237.21 0 01-.428-13.822c-.008-15.175 1.791-24.897 3.928-30.822a32.7 32.7 0 011.352-3.216v113.739a9.378 9.378 0 0018.756 0v-57.15a9.576 9.576 0 01-3.252-6.64z"/>
+                <circle cx="159.848" cy="43.693" r="17.065"/>
+                <path d="M214.844 137.088a10.141 10.141 0 01-2.324 4.496 10.117 10.117 0 01-7.008 3.4 9.23 9.23 0 01-.619.021 10.13 10.13 0 01-4.379-1.001v60.07c0 5.635 4.568 10.201 10.201 10.201 1.487 0 2.896-.326 4.17-.898-.016-.274-.041-.545-.041-.822v-75.467z"/>
+                <path d="M194.178 117.976c.033-24.541 3.561-41.838 10.787-52.884a32.986 32.986 0 013.703-4.673h-26.004c-.127 0-.252.012-.377.019-1.498.03-3.934.364-6.697 1.76-2.932 1.46-6.102 4.099-8.811 8.212-5.424 8.288-9.402 22.068-9.434 46.97 0 4.832.154 10.084.488 15.805a6.6 6.6 0 1013.178-.771c-.32-5.485-.467-10.484-.467-15.034-.008-16.506 1.949-27.081 4.273-33.527a35.08 35.08 0 011.471-3.498v123.72c0 5.635 4.566 10.201 10.201 10.201 5.631 0 10.199-4.566 10.199-10.201v-63.222a10.169 10.169 0 01-1.975-5.456c-.356-6.127-.535-11.986-.535-17.421z"/>
+                <circle cx="198.602" cy="37.155" r="18.563"/>
+                <path d="M255.475 145.74a10.935 10.935 0 01-8.223 3.692c-1.033 0-2.031-.149-2.98-.418v63.543c0 6.148 4.982 11.127 11.129 11.127 1.127 0 2.213-.171 3.238-.482v-83.699h-.445a10.92 10.92 0 01-2.719 6.237z"/>
+                <path d="M236.273 139.068c-.396-6.814-.596-13.318-.596-19.332.033-27.203 3.936-46.361 11.93-58.578a36.133 36.133 0 014.244-5.313h-27.053c-.139 0-.275.013-.412.021-1.633.033-4.289.397-7.307 1.92-3.197 1.594-6.654 4.471-9.609 8.959-5.918 9.041-10.258 24.074-10.293 51.238 0 5.271.17 11 .533 17.241a7.2 7.2 0 0014.376-.84c-.35-5.985-.508-11.438-.508-16.401-.008-18.006 2.125-29.543 4.662-36.575a38.73 38.73 0 011.604-3.815v134.965c0 6.148 4.982 11.127 11.129 11.127 6.143 0 11.127-4.979 11.127-11.127v-65.791c-2.192-1.884-3.647-4.609-3.827-7.699z"/>
+                <circle cx="242.186" cy="30.465" r="20.25"/>
+                <path d="M331.816 71.695c-4.059-10.34-9.855-16.175-15.234-18.842-3.357-1.691-6.309-2.096-8.123-2.131-.152-.009-.303-.023-.457-.023h-38.635c-.154 0-.307.015-.459.023-1.814.037-4.766.441-8.117 2.133-3.553 1.77-7.394 4.968-10.678 9.953-6.574 10.046-11.396 26.749-11.436 56.932 0 5.857.188 12.223.592 19.156a8.002 8.002 0 008.453 7.52 8 8 0 007.52-8.454c-.389-6.649-.564-12.708-.564-18.223-.01-20.007 2.361-32.826 5.18-40.639a43.766 43.766 0 011.781-4.239V224.82c0 6.83 5.537 12.363 12.365 12.363 6.826 0 12.363-5.533 12.363-12.363v-90.271h4.635v90.271c0 6.83 5.537 12.363 12.365 12.363 6.826 0 12.363-5.533 12.363-12.363V74.824c3.467 7.1 6.998 20.704 6.963 44.916 0 5.513-.176 11.571-.568 18.221a8.002 8.002 0 0015.976.938c.406-6.934.596-13.303.596-19.158-.017-22.661-2.773-37.666-6.881-48.046z"/>
+                <circle cx="288.686" cy="22.5" r="22.5"/>
+              </svg>
+              <%= link to: Routes.page_path(@conn, :index) do %>
+                <span class="font-normal text-xl tracking-tight ml-2">Wait List</span>
+              <% end %>
+            </div>
+            <div class="block flex-grow flex items-center w-auto">
+              <div class="text-sm flex-grow">
+
+              </div>
+              <div>
+                <%= if Pow.Plug.current_user(@conn) do %>
+                  <span class="text-sm text-white mr-3"><%=@current_user.email%></span>
+                  <%= link "Sign out", to: Routes.pow_session_path(@conn, :delete), method: :delete, class: "text-sm text-white hover:text-yellow-300" %>
+                <% else %>
+                  <%= link "Register", class: "text-sm text-white hover:text-yellow-300 mr-3", to: Routes.pow_registration_path(@conn, :new) %>
+                  <%= link "Sign in", class: "text-sm text-white hover:text-yellow-300", to: Routes.pow_session_path(@conn, :new) %>
+                <% end %>
+                </div>
+            </div>
+          </nav>
+        </section>
+      </header>
+      <main role="main" class="p-4">
+        <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+        <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+        <%= render @view_module, @view_template, assigns %>
+      </main>
+    </div>
     <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
